--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,15 +10,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get_it: ^8.0.3
-  injectable: ^2.5.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  injectable_generator: ^2.7.0
   build_runner: ^2.4.14
+  json_serializable: ^6.9.3
 
 flutter:
 
