--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,13 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  cloud_firestore: ^5.6.3
+  firebase_core: ^3.11.0
   flutter:
     sdk: flutter
   json_annotation: ^4.9.0
+  injectable: ^2.5.0
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
@@ -18,6 +22,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.14
   json_serializable: ^6.9.3
+  injectable_generator: ^2.7.0
 
 flutter:
 
