--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,11 @@ environment:
 
 dependencies:
   cloud_firestore: ^5.6.3
+  firebase_auth: ^5.4.2
   firebase_core: ^3.11.0
   flutter:
     sdk: flutter
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
