--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,10 @@ environment:
 
 dependencies:
   cloud_firestore: ^5.6.3
+  collection: ^1.19.0
   firebase_auth: ^5.4.2
   firebase_core: ^3.11.0
+  firebase_storage: ^12.4.2
   flutter:
     sdk: flutter
   google_sign_in: ^6.2.2
