--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^5.6.3
+  cloud_functions: ^5.3.2
   collection: ^1.19.0
   firebase_auth: ^5.4.2
   firebase_core: ^3.11.0
